--- a/package.json
+++ b/package.json
@@ -8,19 +8,13 @@
     "email": "matt.overall@gmail.com"
   },
   "license": "MIT",
-  "main": "dist/vituity-ui.umd.js",
-  "module": "dist/vituity-ui.esm.js",
-  "unpkg": "dist/vituity-ui.min.js",
+  "main": "src/index.js",
+  "sass": "src/style/vituity.sass",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vuejs/ui.git"
-  },
-  "homepage": "https://github.com/vuejs/ui#readme",
   "dependencies": {
     "vue-multiselect": "2.1.6",
     "vue-cleave-component": "2.1.3"
@@ -48,5 +42,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
+  },
+  "peerDependencies": {
+    "vue": "^2.6.11"
   }
 }
