--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@vituity/ui",
   "description": "UI components used in the oranization",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
+  "private": false,
   "author": {
     "name": "Matt Overall",
     "email": "matt.overall@gmail.com"
@@ -14,6 +14,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MatthewOverall/vituity-ui.git"
   },
   "dependencies": {
     "vue-multiselect": "2.1.6",
