--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vituity/ui",
+  "name": "@vituity/vue-ui",
   "description": "UI components used in the oranization",
   "version": "0.1.1",
   "private": false,
@@ -14,6 +14,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vituity/vue-ui.git"
   },
   "dependencies": {
     "vue-multiselect": "2.1.6",
