--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "vue-multiselect": "2.1.6",
-    "vue-cleave-component": "2.1.3"
+    "vue-cleave-component": "2.1.3",
+    "axios": "0.19.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
